--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>
-		    var URL = 'https://salvkul4b5.execute-api.us-west-2.amazonaws.com/contact'
+		    var URL = 'https://salvkul4b5.execute-api.us-west-2.amazonaws.com/prod/contact'
 		 
 		$('#contact-form').submit(function (event) {
 		  event.preventDefault()
